# Agent-Crew-for-Deep-Research

./: README.md  ReportFlowPlot.html  poem.txt  requirements.txt
fin_crew_gemini/: README.md  pyproject.toml
fin_crew_gemini/news/: ytd_profit_gain_sp500_vs_gold_2024.md
fin_crew_gemini/src/fin_crew_gemini/: crew.py  main.py
fin_crew_gemini/src/fin_crew_gemini/config/: agents.yaml  tasks.yaml
fin_crew_gemini/src/fin_crew_gemini/tools/: custom_tool.py
fin_crew_gemini/tests/: test_gemini_api.py
fin_flow_gemini/: README.md  pyproject.toml
fin_flow_gemini/src/fin_flow_gemini/: main.py
fin_flow_gemini/src/fin_flow_gemini/crews/news_crew/: news_crew.py  news_driver.py
fin_flow_gemini/src/fin_flow_gemini/crews/news_crew/config/: agents.yaml  tasks.yaml
fin_flow_gemini/src/fin_flow_gemini/crews/report_crew/: report_crew.py  report_driver.py
fin_flow_gemini/src/fin_flow_gemini/crews/report_crew/config/: agents.yaml  tasks.yaml
fin_flow_gemini/src/fin_flow_gemini/crews/visualizer_crew/: visualizer_crew.py
fin_flow_gemini/src/fin_flow_gemini/crews/visualizer_crew/config/: agents.yaml  tasks.yaml
