[project]
name = "fin_crew_gemini"
version = "0.1.0"
description = "fin_crew_gemini using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
fin_crew_gemini = "fin_crew_gemini.main:run"
run_crew = "fin_crew_gemini.main:run"
train = "fin_crew_gemini.main:train"
replay = "fin_crew_gemini.main:replay"
test = "fin_crew_gemini.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
